--- a/CodingIdeas.Core/CodingIdeas.Core.csproj
+++ b/CodingIdeas.Core/CodingIdeas.Core.csproj
@@ -59,6 +59,7 @@
     <Compile Include="DataTransferObjects\Post.cs" />
     <Compile Include="DataTransferObjects\ProgrammingLanguage.cs" />
     <Compile Include="DataTransferObjects\User.cs" />
+    <Compile Include="DataTransferObjects\UserSkill.cs" />
     <Compile Include="DB\CodingIdeasDataModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -95,6 +96,7 @@
     <Compile Include="DB\UserSkill.cs">
       <DependentUpon>CodingIdeasDataModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Exceptions\UserNotFoundException.cs" />
     <Compile Include="IDataTransferManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
