--- a/CodingIdeas.TestApp/App.config
+++ b/CodingIdeas.TestApp/App.config
@@ -3,7 +3,7 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+  </configSections>
   <connectionStrings>
     <add name="CodingIdeasEntities" connectionString="metadata=res://*/DB.CodingIdeasDataModel.csdl|res://*/DB.CodingIdeasDataModel.ssdl|res://*/DB.CodingIdeasDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-R0DMKRJ\SQLEXPRESS;initial catalog=coding_ideas;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
