Added additional exceptions. Fixed a bug where if the AuthorId of a comment was null, it would crash.

--- a/CodingIdeas.Core/CodingIdeas.Core.csproj
+++ b/CodingIdeas.Core/CodingIdeas.Core.csproj
@@ -108,6 +108,8 @@
     <Compile Include="DB\UserSkill.cs">
       <DependentUpon>CodingIdeasDataModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Exceptions\InvalidPageNumberException.cs" />
+    <Compile Include="Exceptions\PostNotFoundException.cs" />
     <Compile Include="Exceptions\UserNotFoundException.cs" />
     <Compile Include="IDataTransferManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
