--- a/CodingIdeas.WebApi/CodingIdeas.WebApi.csproj
+++ b/CodingIdeas.WebApi/CodingIdeas.WebApi.csproj
@@ -131,6 +131,7 @@
     <Compile Include="Controllers\CommentController.cs" />
     <Compile Include="Controllers\PostController.cs" />
     <Compile Include="Controllers\ProgrammingLanguageController.cs" />
+    <Compile Include="Controllers\RatingController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
