Added controller for saved posts. Also changed some parameters of the api methods.

--- a/CodingIdeas.WebApi/CodingIdeas.WebApi.csproj
+++ b/CodingIdeas.WebApi/CodingIdeas.WebApi.csproj
@@ -132,6 +132,7 @@
     <Compile Include="Controllers\PostController.cs" />
     <Compile Include="Controllers\ProgrammingLanguageController.cs" />
     <Compile Include="Controllers\RatingController.cs" />
+    <Compile Include="Controllers\SavedController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
