Changed User.PasswordHash to User.Password. Added a controller for the User.

--- a/CodingIdeas.WebApi/CodingIdeas.WebApi.csproj
+++ b/CodingIdeas.WebApi/CodingIdeas.WebApi.csproj
@@ -133,9 +133,11 @@
     <Compile Include="Controllers\ProgrammingLanguageController.cs" />
     <Compile Include="Controllers\RatingController.cs" />
     <Compile Include="Controllers\SavedController.cs" />
+    <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\Hasher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
