--- a/CodingIdeas.WebApi/Web.config
+++ b/CodingIdeas.WebApi/Web.config
@@ -37,7 +37,7 @@
       <customHeaders>
         <add name="Access-Control-Allow-Origin" value="*" />
         <add name="Access-Control-Allow-Headers" value="Content-Type" />
-        <add name="Access-Control-Allow-Methods" value="GET, POST, PUT, DELETE" />
+        <add name="Access-Control-Allow-Methods" value="GET, POST, PUT, DELETE, OPTIONS" />
       </customHeaders>
     </httpProtocol>
   </system.webServer>
